--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^3.3.7",
+    "node-sass": "^4.12.0",
+    "node-sass-chokidar": "^1.3.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-popper": "^1.3.4",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
