--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-popper": "^1.3.4",
-    "react-scripts": "^3.4.0"
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.4.0",
+
+
+    "react-router-dom": "^5.0.1"
+
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
